# lavabo

./: .gitignore  Dockerfile  README.md  TODO.md  docker-compose.yml  pyproject.toml  test.py
.github/workflows/: docker-publish.yml
ai_toolkit/: __init__.py
ai_toolkit/gguf/: __init__.py  loader.py
api/: main.py
docs/: docker-api-testing.md
examples/: README.md  chat_basic.mjs  chat_structured.mjs  clip_classify.mjs  embeddings.mjs  kokoro_tts.mjs  moondream.mjs  piper_tts.mjs  util.mjs  vram.mjs
server/: Dockerfile  README.md  docker-compose.yml  requirements.lock.txt
server/api/: main.py
server/tts/: __init__.py  model_setup.py  piper_setup.py
